k8sb44/ingresss/ingressrule.yml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
       name: ingress
       annotations: 
           nginx.ingress.kubernetes.io/rewrite-target: / 
spec:   
   ingressClassName: nginx 
   rules: 
     - host:   #lbendpoint 
       http:
          paths:
            - path:  /    #if only lb traffic will redirect to nginx microservice  
              pathType: Prefix 
              backend:
                 service:
                    name: npci
                    port:
                       number: 80 
            - path:  /tomcat    #if only lb traffic will redirect to nginx microservice  
              pathType: Prefix 
              backend:
                 service:
                    name: tcci
                    port:
                       number: 8080
